--- a/Proyecto_Ing_Soft/Proyecto_Ing_Soft.csproj
+++ b/Proyecto_Ing_Soft/Proyecto_Ing_Soft.csproj
@@ -110,6 +110,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RF.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RF.Designer.cs">
+      <DependentUpon>RF.cs</DependentUpon>
+    </Compile>
     <Compile Include="SEvidencia.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -160,6 +166,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RF.resx">
+      <DependentUpon>RF.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SEvidencia.resx">
       <DependentUpon>SEvidencia.cs</DependentUpon>
     </EmbeddedResource>
