--- a/InterfazAdminTest/PruebaUnitariaInicio.csproj
+++ b/InterfazAdminTest/PruebaUnitariaInicio.csproj
@@ -52,6 +52,8 @@
   <ItemGroup>
     <Compile Include="InicioSesionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PromedioTest.cs" />
+    <Compile Include="CalificacionesTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
